# twitter_media

./: .gitignore  .pre-commit-config.yaml  README.md  ROADMAP.md  pyproject.toml  result.txt  ruff.toml
scripts/pre-commit/: bandit.bat  coverage.bat  formatter.bat  linter.bat  mypy.bat  poetry.bat
src/: __init__.py  __main__.py  cli.py  model.py  utils.py
src/commands/: callback.py  extract.py  llm.py
src/parser/: helper.py  task.py
src/templates/: summarize.jinja2  task.jinja2
tests/: test_precommit.py
