[tool.poetry]
name = "twitter-media"
version = "0.1.0"
description = ""
authors = ["Athroniaeth <pierre.chaumont@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
twikit = "^2.1.0"
typer = "^0.12.3"
python-dotenv = "^1.0.1"
langchain = "^0.2.11"
langchain-community = "^0.2.10"
transformers = "^4.43.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
bandit = "^1.7.9"
coverage = "^7.6.0"
ruff = "^0.5.5"
mypy = "^1.11.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
